fix layout issue

--- a/src/styles/dlite.css
+++ b/src/styles/dlite.css
@@ -1,3 +1,8 @@
+
+body {
+    overflow-x: hidden;
+}
+
 @media (min-width: 768px) {
     body {
         font-weight: lighter;
